Behavior should not trigger when the tracked value has not changed.

Behaviors are specifically for animating changes in value. When the
value has not changed, do not trigger the animation. This ensures
the animation system is not unnecessarily woken.

[ChangeLog][QtQuick][Behavior] Do not trigger a Behavior when the
tracked value has not changed.

Task-number: QTBUG-21549
Change-Id: I5b20121ccfb75ea5ebf86705df89891c94cf6e7e
Reviewed-by: Robin Burchell <robin+qt@viroteck.net>
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>
Reviewed-by: Alan Alpert (Personal) <416365416c@gmail.com>